--- a/news.html
+++ b/news.html
@@ -65,8 +65,8 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-10">
-          <span class="d-block mb-3 caption" data-aos="fade-up">Updates</span>
-          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">News</h1>
+          <span class="d-block mb-3 caption" data-aos="fade-up">The</span>
+          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Commitees</h1>
         </div>
       </div>
     </div>
@@ -153,21 +153,6 @@
             eligendi. Nesciunt repellendus ab voluptatibus.
         </div>
 
-      </div>
-
-
-      <div class="row" data-aos="fade-up" data-aos-delay="500">
-        <div class="col-md-12 text-center">
-          <div class="custom-pagination">
-            <span>1</span>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <span>...</span>
-            <a href="#">10</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
