--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
   <div class="site-section">
     <div class="container">
-      <div class="row mb-5 justify-content-center">
+      <div class=" row mb-5 justify-content-center">
         <div class="col-lg-4 mb-5">
           <div class="site-section-heading" data-aos="fade-up">
             <h2 class="text-center">Our Team</h2>
@@ -83,176 +83,48 @@
       </div>
 
       <div class="row">
+        <section class="section1">
+          <div class="profile"></div>
+          <div class="rapid_fire">
+            <div class="img"></div>
+            <div class="rapid_fire_content">
 
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="100">
-          <div class="testimony text-center">
-            <figure>
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid">
-            </figure>
-            <blockquote>
-              <p class="author mb-0">Emely Peters</p>
-              <p class="text-muted mb-4">Coordinator</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem alias reprehenderit
-                error quidem aliquam ad minus, veritatis modi.&</p>
-
-            </blockquote>
+            </div>
+            <div class="img"></div>
           </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="200">
-          <div class="testimony text-center">
-            <figure>
-              <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-            </figure>
-            <blockquote>
-              <p class="author mb-0">Alex Anchors</p>
-              <p class="text-muted mb-4">Coordinator</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem alias reprehenderit
-                error quidem aliquam ad minus, veritatis modi.&</p>
-
-            </blockquote>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="300">
-          <div class="testimony text-center">
-            <figure>
-              <img src="images/person_3.jpg" alt="Image" class="img-fluid">
-            </figure>
-            <blockquote>
-              <p class="author mb-0">Aaron Thomas</p>
-              <p class="text-muted mb-4">Coordinator</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem alias reprehenderit
-                error quidem aliquam ad minus, veritatis modi.&</p>
-
-            </blockquote>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="400">
-          <div class="testimony text-center">
-            <figure>
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid">
-            </figure>
-            <blockquote>
-              <p class="author mb-0">Emely Peters</p>
-              <p class="text-muted mb-4">Coordinator</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem alias reprehenderit
-                error quidem aliquam ad minus, veritatis modi.&</p>
-
-            </blockquote>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="500">
-          <div class="testimony text-center">
-            <figure>
-              <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-            </figure>
-            <blockquote>
-              <p class="author mb-0">Alex Anchors</p>
-              <p class="text-muted mb-4">Coordinator</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem alias reprehenderit
-                error quidem aliquam ad minus, veritatis modi.&</p>
-
-            </blockquote>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="600">
-          <div class="testimony text-center">
-            <figure>
-              <img src="images/person_3.jpg" alt="Image" class="img-fluid">
-            </figure>
-            <blockquote>
-              <p class="author mb-0">Aaron Thomas</p>
-              <p class="text-muted mb-4">Coordinator</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem alias reprehenderit
-                error quidem aliquam ad minus, veritatis modi.&</p>
-
-            </blockquote>
-          </div>
-        </div>
-      </div>
-
-
-
-
-
-    </div>
-  </div>
-
-  <div class="site-section">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-lg-4 ">
-          <div class="site-section-heading" data-aos="fade-up">
-            <h2>Sponsors</h2>
-          </div>
-        </div>
-        <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus
-            eligendi. Nesciunt repellendus ab voluptatibus.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-          <img src="images/logo_1.png" alt="Image" class="img-fluid">
-        </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
-          <img src="images/logo_2.png" alt="Image" class="img-fluid">
-        </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="400">
-          <img src="images/logo_3.png" alt="Image" class="img-fluid">
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="500">
-          <img src="images/logo_4.png" alt="Image" class="img-fluid">
-        </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="600">
-          <img src="images/logo_5.png" alt="Image" class="img-fluid">
-        </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="700">
-          <img src="images/logo_6.png" alt="Image" class="img-fluid">
-        </div>
-
+        </section>
       </div>
     </div>
-  </div>
 
-
-
-
-
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-md-4">
-          <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-md-4">
+            <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
+          </div>
+          <div class="col-md-3 ml-auto">
+            <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Our Mentors</a></li>
+              <li><a href="#">Speakers</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
+            <p>
+              <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
+              <a href="#" class="p-2"><span class="icon-twitter"></span></a>
+              <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+            </p>
+          </div>
         </div>
-        <div class="col-md-3 ml-auto">
-          <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-          <ul class="list-unstyled">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Our Mentors</a></li>
-            <li><a href="#">Speakers</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
-          <p>
-            <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-            <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-            <a href="#" class="p-2"><span class="icon-instagram"></span></a>
-          </p>
-        </div>
+
       </div>
-
-    </div>
-  </footer>
+    </footer>
 
   </div>
 
