--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body
+  style="background-image: url('/images/bg.png');background-position: bottom; background-size: auto 100%; background-repeat: no-repeat">
 
   <div class="site-wrap">
 
