--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
   </div>
 
   <div class="site-section">
-    <div class="container">
+    <div class="container" style="margin: 0; max-width: 1920px">
       <div class=" row mb-5 justify-content-center">
         <div class="col-lg-4 mb-5">
           <div class="site-section-heading" data-aos="fade-up">
